fix: stretch the table to the whole width

--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,4 +1,6 @@
 table {
+  table-layout: fixed;
+  width: 100%;
   border: 1px solid lightgray;
   text-align: left;
 }
